syntax="proto3";

package proto;

option go_package = "github.com/tortuga-softworks/hestia/proto";

service Registration {
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
}

message SignUpRequest {
    string email = 1;
    string password = 2;
}

message SignUpResponse {
    string user_id = 1;
}

